case study update

--- a/about.html
+++ b/about.html
@@ -50,14 +50,14 @@
             <p class="spacing">My name is John Teo, nice to meet you!</p>
             <p class="spacing">
               I am currently a service and interaction designer at
-              <a href="https://www.fjordnet.com/"> Fjord Singapore</a>.
+              <a href="https://www.fjordnet.com/" target="blank"> Fjord Singapore</a>.
             </p>
             <p class="spacing">
               Previously, I worked as a product designer at
-              <a href="https://www.spgroup.com.sg/"> SP Group</a> and
-              <a href="https://www.dbs.com.sg/"> DBS</a>. In 2016, I co-founded
+              <a href="https://www.spgroup.com.sg/" target="blank"> SP Group</a> and
+              <a href="https://www.dbs.com.sg/" target="blank"> DBS</a>. In 2016, I co-founded
               my mini creative studio,
-              <a href="https://www.studioaubergine.design/"> Studio Aubergine</a
+              <a href="https://www.studioaubergine.design/" target="blank"> Studio Aubergine</a
               >, with some friends for all our weird little experiments.
             </p>
             <p class="spacing">
