fixing typo errors

--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
           <p>
             Facing additional challenges because of Covid-19, the team conducted
             remote ethnography through diary studies and remote interviews to
-            understand these key trends connected homes, as well as
+            understand these key trends regarding connected homes, as well as
             home entertainment platforms. 
           </p>
           <p class ="spacing"></p>
