--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <div class="titlecontainer">
-      <h1 class="title">I'm John, a product designer based in Singapore.</h1>
+      <h1 class="title">I'm John, a product designer based in Singapore. 👋</h1>
     </div>
 
     <div class="mainwork">
