Update home images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </h2>
             <h6>Read the case study →</h6>
           </div>
-          <img src="Images/switch-00.png" />
+          <img src="Images/switch_home.png" />
         </div>
       </a>
     </div>
@@ -73,7 +73,7 @@
             </h2>
             <h6>Read the case study →</h6>
           </div>
-          <img src="Images/oilandgas-00.png" />
+          <img src="Images/pivot_home.png" />
         </div>
       </a>
     </div>
@@ -85,7 +85,7 @@
             <h2>Redesigning the ATM user interface for DBS</h2>
             <h6>Read the case study →</h6>
           </div>
-          <img src="Images/dbs-00.png" />
+          <img src="Images/atm_home.png" />
         </div>
       </a>
     </div>
